data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2366.wast
;; 7. **Inconsistent Stack Height after Branching**:    - **Test Description**: Inside a block, use branch instructions that leave the operand stack in an erroneous state, either under or overflowing from what the block type specifies.    - **Reasoning**: This test involves checking that the CFG correctly manages the stack height during and after branching within blocks.    - **Constraint checked**: Branching Mechanisms    - **Relation to CFG**: Validates that the CFG correctly maintains stack states through branches.

(assert_invalid
  (module (func $block-inconsistent-stack-height
    (block (result i32)
      (i32.const 42)
      (br 0) ;; This branch leaves the stack height not matching the block type
    )
  ))
  "type mismatch"
)